# py-package-template

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: actions.yaml
tests/: test_tests.py
